// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Icons/PauseIcon should render a pause icon icon 1`] = `
"

<svg
  xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 16 16"
  fill="currentColor"
  width="16"
  height="16"
>
  <path
    d="M5.5 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5z"
  ></path></svg
>;
"
`;

exports[`components/Icons/PauseIcon should render a pause icon with fill color 1`] = `
"

<svg
  xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 16 16"
  fill="#198754"
  width="16"
  height="16"
>
  <path
    d="M5.5 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5z"
  ></path></svg
>;
"
`;
